packages/edxml-test-corpus/edxml_test_corpus-3.0.1-py3-none-any.whl/edxml_test_corpus/tests/3/3.0/3.0.0/invalid/ontology/upgrade-object-type-set-unit-symbol-without-name.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~                                                                           ~
  ~                     Copyright (c) 2020 the EDXML Foundation               ~
  ~                                                                           ~
  ~                                  http://edxml.org                         ~
  ~                                                                           ~
  ~                    This file is part of the EDXML Test Corpus             ~
  ~                      and is released under the MIT License:               ~
  ~                        https://opensource.org/licenses/MIT                ~
  ~                                                                           ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<!--
Test if upgrading an object type setting the unit symbol but not the unit name attribute is rejected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <object-types>
      <object-type name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="number:float"/>
    </object-types>
    <concepts/>
    <event-types/>
    <sources/>
  </ontology>
  <ontology>
    <object-types>
      <!-- Unit symbol is set -->
      <object-type name="a" description="a" display-name-singular="a" display-name-plural="a" version="2" data-type="number:float" unit-symbol="m"/>
    </object-types>
    <concepts/>
    <event-types/>
    <sources/>
  </ontology>
</edxml>
